Suppress warning for sun.misc.Unsafe in SqlDelightWorkerTask.kt (#6321)
Currently SqlDelight is on IntelliJ Platform 2023.3.1 (build 233) to support Android Jellyfish.
The official fix that doesn't use Unsafe is first available in IntelliJ Platform 2025.3 (build 253) Android Panda.

The older IntelliJ platform uses calls to terminally deprecated sun.misc.Unsafe memory access methods, using JDKs containing JEP 498 warns about and eventually denies in phases.

We need to modify SqlDelightWorkerTask forkOptions.jvmArgs as this is not exposed due to gradle process isolation
Sets the jvmArgs to --sun-misc-unsafe-memory-access=allow up to JDK 26, then use --sun-misc-unsafe-memory-access=warn to allow worker to run without exception but we end up back to showing warnings.